# PreFence

./: README.md
evaluation/: README.md
evaluation/6_2_fetchbench/: README.md
evaluation/6_2_fetchbench/fetchbench/init-scripts/: elitebook-gentoo.sh  rpi4-1.5GHz.sh
evaluation/6_2_fetchbench/fetchbench/src/: aligned_maccess.cc  aligned_maccess.hh  mod_ctrl_pf_handle.cc  mod_ctrl_pf_handle.hh  testcase_stride.hh  testcase_stride_strideexperiment.hh
evaluation/6_2_fetchbench/mod-ctrlpf/: Makefile  ctrlpf_ioctl.h  main.c  module_load.sh  module_unload.sh
evaluation/6_2_fetchbench/mod-ctrlpf/armstub/armstubs/: armstub8.S
evaluation/6_2_fetchbench/mod-ctrlpf/user/: Makefile  ioctl.c
evaluation/6_3_openssl/: README.md
evaluation/6_3_openssl/victim-bn/: .gitignore  CMakeLists.txt  plot_exp_openssl.py  plot_exp_openssl_misses.py  run.sh
evaluation/6_3_openssl/victim-bn/src/: common_test.h  expected_locations.c  victim-bn.c
evaluation/6_4_spec/: CPU2017_config_intel.cfg  CPU2017_config_rpi4.cfg  README.md  plot_intel.py  plot_rpi4.py  plot_spec.py
evaluation/6_5_lighttpd/: .gitignore  README.md  httpit_v0.5.0-logfile.patch  lighttpd_1.4.75_prefence.patch
evaluation/6_5_lighttpd/data/: .gitignore  bench.sh  bench_progressive.sh  cert.key  cert.pem  lighttpd.conf  plot-python-httpit.py  plot-python-progressive.py  run-kern_patched-prefence_app.sh  run-kern_patched-prefence_plugin.sh  run-kern_stock-pf_disabled.sh
evaluation/6_5_lighttpd/data/htdocs/: generate_db.py  index-32k.html  index-min.py
evaluation/6_5_lighttpd/data/prefetchable/: CMakeLists.txt  generate_values.py
evaluation/6_5_lighttpd/data/prefetchable/src/: prefetchable.cc  values.hh
evaluation/appendix_b_1_context_switch/: .gitignore  CMakeLists.txt  README.md  plot.py
evaluation/appendix_b_1_context_switch/src/: main-from.cc  main-to-clear.cc  main-to-set.cc  params.hh  utils.hh
evaluation/appendix_b_2_syscall/: CMakeLists.txt  README.md  plot.py
evaluation/appendix_b_2_syscall/src/: main.cc  params.hh  utils.hh
kernel_patch/: README.md
kernel_patch/armstub/: README.md
kernel_patch/kernel/: README.md  patch-v4-6.6.14-0-lts-alpine-x86_64.patch  patch-v5-6.6.22-v8-rpi4-aarch64.patch
kernel_patch/pfdisset/: CMakeLists.txt  README.md
kernel_patch/pfdisset/src/: main.c
kernel_patch/userspace-test/: .gitignore  CMakeLists.txt  README.md
kernel_patch/userspace-test/rpi4-module-pfstate/: Makefile  main.c  module_load.sh  module_unload.sh  pfstate_ioctl.h
kernel_patch/userspace-test/rpi4-module-pfstate/user/: .gitignore  Makefile  ioctl.c
kernel_patch/userspace-test/src/: main.cc  utils.hh
